[package]
name = "tokio_serial"
version = "0.1.0"
authors = ["michael <michael@conveqs.fi>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
tokio = { version = "1.29.1", features = ["full"] }
tokio-codec = "0.1.2"
tokio-serial = "5.4.4"
tokio-stream = { version = "0.1.14", features = ["io-util"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
protobuf = "3"
protobuf-json-mapping = "3.2.0"
colored = "2.0.4"
libc = "0.2.147"
bitintr = "0.3.0"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"
cc = "1.0"
